@@ -286,6 +286,7 @@ meetingPma.onMeetingTransitionItemTransitionToTrigger = ({'meeting_transition': 
 meetingPma.insertingMethodsOnAddItem = ({'insertingMethod': 'on_proposing_groups', 'reverse': '0'}, )
 meetingPma.useGroupsAsCategories = True
 meetingPma.useAdvices = True
+meetingPma.selectableAdvisers = ['developers', 'vendors']
 meetingPma.itemAdviceStates = ['proposed', ]
 meetingPma.itemAdviceEditStates = ['proposed', 'validated', ]
 meetingPma.itemAdviceViewStates = ['presented', ]
@@ -362,6 +363,7 @@ meetingPga.insertingMethodsOnAddItem = ({'insertingMethod': 'on_categories', 're
 meetingPga.useGroupsAsCategories = False
 meetingPga.itemTemplates = (template1, template2, )
 meetingPga.useAdvices = False
+meetingPga.selectableAdvisers = []
 meetingPga.itemPowerObserversStates = ('itemcreated', 'presented', 'accepted', 'delayed', 'refused')
 meetingPga.meetingPowerObserversStates = ('frozen', 'published', 'decided', 'closed')
 meetingPga.itemDecidedStates = ('accepted', 'refused', 'delayed', 'confirmed', 'itemarchived')
